<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">TrivialDrive</string>
    <string name="directory_selected_label">Directory selected:</string>
    <string name="choose_directory">Choose Directory</string>
    <string name="none">none</string>
    <string name="btn_choose">Choose in Dialog</string>
    <string name="btn_switch">Switch to Dialog Sample</string>
    <string name="app_name">WordApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_message_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_dir_chooser_label">Choose Directory</string>
    <string name="pref_dir_chooser_label_internal">Internal Storage</string>
    <string name="pref_dir_chooser_label_external">External Storage</string>
    <string name="pref_dir_chooser_key" translatable="false">dir_chooser</string>
    <string name="pref_dir_chooser_internal" translatable="false">internal</string>
    <string name="pref_dir_chooser_external" translatable="false">external</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Message Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_themes_label">Change Theme</string>
    <string name="pref_themes_label_blue">Blue</string>
    <string name="pref_themes_label_orange">Orange</string>
    <string name="pref_themes_label_dark">Dark</string>
    <string name="pref_themes_key" translatable="false">themes</string>
    <string name="pref_themes_blue" translatable="false">blue</string>
    <string name="pref_themes_orange" translatable="false">orange</string>
    <string name="pref_themes_dark" translatable="false">dark</string>
    <string name="pref_decl_interval_key">decl_interval</string>
    <string name="pref_decl_interval_label">Declaratons Interval</string>
    <string name="pref_decl_interval_label_3">3 Hours</string>
    <string name="pref_decl_interval_label_6">6 Hours</string>
    <string name="pref_decl_interval_label_12">12 Hours</string>
    <string name="pref_decl_interval_value_3">3</string>
    <string name="pref_decl_interval_value_6">6</string>
    <string name="pref_decl_interval_value_12">12</string>
    <string name="latest">Latest Message</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="sync_account_type">app.word.felixunlimited.com</string>
    <string name="content_authority">com.felixunlimited.word.app</string>
    <string name="format_notification">Event: <xliff:g id="condition">%1$s</xliff:g> Date: <xliff:g id="high">%2$s</xliff:g> Venue: <xliff:g id="low">%3$s</xliff:g></string>
    <string name="pref_last_event_notification">last_event_notification</string>
    <string name="pref_last_decl_notification">last_decl_notification</string>
    <string name="pref_default_display_name">name</string>
    <string name="pref_ringtone_silent">silent</string>
    <string name="pref_header_data_sync">e</string>
    <string name="pref_header_notifications">3r</string>
    <string name="today">Today</string>
    <string name="initial_time">0:00</string>
    <string name="overview">Overview</string>
    <string name="download_text">Download</string>
    <string name="title_activity_download">Download Message</string>
    <string name="pref_decl_morning_label">Morning (5:00AM)</string>
    <string name="pref_decl_afternoon_label">Afternoon (3:00PM)</string>
    <string name="pref_decl_evening_label">Evening (8:00PM)</string>
    <string name="pref_decl_morning">6</string>
    <string name="pref_decl_afternoon">15</string>
    <string name="pref_decl_evening">20</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message_purchase">Message Purchase</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="action_subscriptions">Subscriptions</string>
    <string name="title_activity_subscription">Subscriptions</string>
    <string name="title_activity_splash_screen">Splash Screen Activity</string>
    <string name="title_activity_messages_search">Messages Search</string>
    <string name="action_search">Search</string>
    <string name="action_show_database">Show DataBase</string>
    <string name="search_hint">Message Title</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="create_token">Create token</string>
    <string name="no_card_yet">No card yet</string>
    <string name="no_token">No token</string>
    <string name="token_null_message">Token was null</string>
    <string name="token_not_gotten">Unable to get token</string>
    <string name="sample_card">4123450131001381</string>
    <string name="sample_cvv">883</string>
    <string name="sample_month">01</string>
    <string name="sample_year">2020</string>
    <string name="no_transaction_yet">No transaction yet</string>
    <string name="amount_in_kobo">Amount in Kobo</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="subscription_period_monthly">Monthly</string>
    <string name="subscription_period_yearly">Yearly</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="content_description_title_image">80\'s Video Game Style Car Logo</string>
    <string name="content_desc_gas_gauge_indicator">Gas gauge indicator</string>
    <string name="content_desc_free_vs_premium_indicator">Free or Premium Image Indicator</string>
    <string name="title_activity_events">Events</string>
    <string name="upcoming_events">Events</string>
    <string name="ideclare">iDeclare</string>
</resources>