<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.felixunlimited.word.app.DetailActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <!--<item android:id="@+id/action_subscriptions"-->
        <!--android:title="@string/action_subscriptions"-->
        <!--android:orderInCategory="90"-->
        <!--app:showAsAction="never" />-->
    <item android:id="@+id/action_events"
        android:title="@string/upcoming_events"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item android:id="@+id/action_declarations"
        android:title="@string/ideclare"
        android:orderInCategory="10"
        app:showAsAction="never" />
</menu>
